fix: caret position in text fields

--- a/packages/q3-admin/__fixtures__/App.stories.mdx
+++ b/packages/q3-admin/__fixtures__/App.stories.mdx
@@ -27,3 +27,15 @@ import App from './App';
     <App initialPath="/shows/1" />
   </Story>
 </Preview>
+
+<Preview>
+  <Story name="Password">
+    <App initialPath="/account/change-password" />
+  </Story>
+</Preview>
+
+<Preview>
+  <Story name="Profile">
+    <App initialPath="/account/profile" />
+  </Story>
+</Preview>
