fix: multicheck state when initialized with type other than array

--- a/packages/q3-ui-forms/stories/Adapters.stories.mdx
+++ b/packages/q3-ui-forms/stories/Adapters.stories.mdx
@@ -33,6 +33,11 @@ import { asOptions } from '../src/helpers';
             type="autocomplete"
             options={['Visa', 'Mastercard', 'PayPal']}
           />
+          <Field
+            name="paymentOption"
+            type="checkset"
+            options={['Visa', 'Mastercard', 'PayPal']}
+          />
           <Field name="total" type="range" />
           <Field name="createdOn" type="dateRange" />
           <Field
