test: make file directory

--- a/packages/q3-ui-filemanager/src/FileList/FileList.stories.mdx
+++ b/packages/q3-ui-filemanager/src/FileList/FileList.stories.mdx
@@ -17,20 +17,20 @@ import FileList from './FileList';
       files={[
         {
           tag: 'examples',
-          name: 'example-file.jpg',
+          name: 'pos/example-file.jpg',
           type: 'text/csv',
           size: 13400,
           url: 'http://google.ca',
         },
         {
-          name: 'example-file.csv',
+          name: 'pos/example-fil2e.csv',
           type: 'text/csv',
           size: 13400,
           url: 'http://google.ca',
         },
         {
           tag: 'po',
-          name: 'example-file.pdf',
+          name: 'misc/example-file.pdf',
           type: 'text/csv',
           size: 13400,
           url: 'http://google.ca',
