test: FileListMake and FileListBreadcrumbs

--- a/packages/q3-ui-filemanager/src/FileList/FileList.stories.mdx
+++ b/packages/q3-ui-filemanager/src/FileList/FileList.stories.mdx
@@ -23,7 +23,7 @@ import FileList from './FileList';
           url: 'http://google.ca',
         },
         {
-          name: 'pos/example-fil2e.csv',
+          name: 'pos/required/example-fil2e.csv',
           type: 'text/csv',
           size: 13400,
           url: 'http://google.ca',
