tests: file input

--- a/packages/q3-ui-forms/stories/Fields.stories.mdx
+++ b/packages/q3-ui-forms/stories/Fields.stories.mdx
@@ -78,6 +78,7 @@ import { Exists } from '../src/presets';
             positive
             helper="Between 1 and 10"
           />
+          <Field name="po" type="file" />
           <Field name="date" type="date" />
           <Field name="dateRange" type="dateRange" />
           <Field name="checkbox" type="checkbox" />
