--- a/packages/q3-ui-filemanager/src/FileList/FileList.stories.mdx
+++ b/packages/q3-ui-filemanager/src/FileList/FileList.stories.mdx
@@ -5,6 +5,8 @@ import {
   Props,
 } from '@storybook/addon-docs/blocks';
 import FileList from './FileList';
+import files from '../../tests/fixtures/files.json';
+import support from '../../tests/support'
 
 <Meta title="Files|FileList" component={FileList} />
 
@@ -12,35 +14,10 @@ import FileList from './FileList';
 
 <Preview>
   <Story name="As default">
-    <FileList
-      drop={['examples']}
-      files={[
-        {
-          tag: 'examples',
-          name: 'pos/example-file.jpg',
-          type: 'text/csv',
-          size: 13400,
-          url: 'http://google.ca',
-        },
-        {
-          name: 'pos/required/example-fil2e.csv',
-          type: 'text/csv',
-          size: 13400,
-          url: 'http://google.ca',
-        },
-        {
-          tag: 'po',
-          name: 'misc/example-file.pdf',
-          type: 'text/csv',
-          size: 13400,
-          url: 'http://google.ca',
-        },
-        {
-          name: 'example-file.jpg',
-          type: 'text/csv',
-          size: 13400,
-        },
-      ]}
-    />
+    <FileList files={files} onDrop={support.onDrop.succeed()} />
   </Story>
 </Preview>
+
+## API
+
+<Props of={FileList} />
