--- a/packages/q3-ui-filemanager/src/Avatar/Avatar.stories.mdx
+++ b/packages/q3-ui-filemanager/src/Avatar/Avatar.stories.mdx
@@ -13,8 +13,11 @@ import support from '../../tests/support';
 # Avatar
 
 <Preview>
-  <Story name="As default">
+  <Story name="Without photo">
     <Avatar />
+  </Story>
+  <Story name="With photo">
+    <Avatar src="https://images.unsplash.com/photo-1597321362768-6c65a5d8f113?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" />
   </Story>
 </Preview>
 
