fix: directory active state

--- a/packages/q3-ui-forms/src/fields/File/File.stories.mdx
+++ b/packages/q3-ui-forms/src/fields/File/File.stories.mdx
@@ -21,8 +21,14 @@ import Field from '../../builders/Field';
   <Story name="With value">
     <Form
       debug
+      restart
       initialValues={{ sample: 'sample.csv' }}
-      onSubmit={action('onSubmit')}
+      onSubmit={(v) =>
+        new Promise((r) => {
+          action('onSubmit')(v);
+          r();
+        })
+      }
     >
       <Field name="sample" type="file" />
     </Form>
