--- a/packages/q3-admin/src/components/TemplateFullWidth/TemplateFullWidth.stories.mdx
+++ b/packages/q3-admin/src/components/TemplateFullWidth/TemplateFullWidth.stories.mdx
@@ -24,6 +24,14 @@ of the admin viewport.
       <p>Perfect for custom content pages.</p>
     </TemplateFullWidth>
   </Story>
+  <Story name="With aside">
+    <TemplateFullWidth
+      title="Title"
+      asideComponent={<p>Aside</p>}
+    >
+      <p>Primary article</p>
+    </TemplateFullWidth>
+  </Story>
 </Preview>
 
 <Props of={TemplateFullWidth} />
