--- a/packages/q3-ui-forms/stories/Fields.stories.mdx
+++ b/packages/q3-ui-forms/stories/Fields.stories.mdx
@@ -15,6 +15,7 @@ import Wrapper, {
 } from '../src/builders/Wrapper/Wrapper';
 import { countries } from '../src/fields/__fixtures__/options';
 import { Exists } from '../src/presets';
+import Timezone from './Timezone.jsx';
 
 <Meta title="Forms|Field" component={Field} />
 
@@ -165,6 +166,12 @@ minimum values, maximum values, and required values.
         })}
       />
     </Form>
+  </Story>
+</Preview>
+
+<Preview>
+  <Story name="Timezone">
+    <Timezone />
   </Story>
 </Preview>
 
