fix: isUtc matching against integers

--- a/packages/q3-ui-rest/stories/Timezone.stories.mdx
+++ b/packages/q3-ui-rest/stories/Timezone.stories.mdx
@@ -6,7 +6,7 @@ import {
 } from '@storybook/addon-docs/blocks';
 import Timezone from './Timezone';
 
-<Meta title="useTimezone" />
+<Meta title="REST/Examples" />
 
 # useTimezone
 
