fix: initial value for object-based fields

--- a/packages/q3-ui-forms/stories/Builders.stories.mdx
+++ b/packages/q3-ui-forms/stories/Builders.stories.mdx
@@ -13,7 +13,7 @@ import Wrapper, {
 import { countries } from '../src/fields/__fixtures__/options';
 
 <Meta
-  title="Forms|Builder"
+  title="Forms/Builder"
   component={Wrapper}
   subtitle="hello"
   parameters={{ componentSubtitle: 'HI' }}
