chore: fix story labels

--- a/packages/q3-admin/__fixtures__/App.stories.mdx
+++ b/packages/q3-admin/__fixtures__/App.stories.mdx
@@ -6,7 +6,7 @@ import {
 } from '@storybook/addon-docs/blocks';
 import App from './App';
 
-<Meta title="_Q3|Demo" component={App} />
+<Meta title="_Q3/Demo" component={App} />
 
 # Q3
 
