--- a/packages/q3-admin/src/components/ActionList/ActionList.stories.mdx
+++ b/packages/q3-admin/src/components/ActionList/ActionList.stories.mdx
@@ -8,7 +8,7 @@ import IconButton from '@material-ui/core/IconButton';
 import KeyboardBackspace from '@material-ui/icons/KeyboardBackspace';
 import ActionList from './ActionList';
 
-<Meta title="Admin|Action List" component={ActionList} />
+<Meta title="Admin/Action List" component={ActionList} />
 
 # Action List
 
