--- a/packages/q3-admin/src/components/FilterEntry/FilterEntry.stories.mdx
+++ b/packages/q3-admin/src/components/FilterEntry/FilterEntry.stories.mdx
@@ -8,7 +8,7 @@ import { Form } from 'q3-ui-forms/lib/builders';
 import FilterEntry from './FilterEntry';
 import { filterOptions } from '../../__fixtures__/formData';
 
-<Meta title="Admin|FilterEntry" component={FilterEntry} />
+<Meta title="Admin/FilterEntry" component={FilterEntry} />
 
 # FilterEntry
 
