--- a/packages/q3-admin/src/components/Navigation/Navigation.stories.mdx
+++ b/packages/q3-admin/src/components/Navigation/Navigation.stories.mdx
@@ -15,7 +15,7 @@ import menuItems, {
 } from '../../__fixtures__/menuItems';
 import logo from '../../__fixtures__/logo';
 
-<Meta title="Admin|Navigation" component={Navigation} />
+<Meta title="Admin/Navigation" component={Navigation} />
 
 # Navigation
 
