--- a/packages/q3-admin/src/components/NavigationSubMenu/NavigationSubMenu.stories.mdx
+++ b/packages/q3-admin/src/components/NavigationSubMenu/NavigationSubMenu.stories.mdx
@@ -12,7 +12,7 @@ import DashboardIcon from '@material-ui/icons/Dashboard';
 import { extendedMenuItems } from '../../__fixtures__/menuItems';
 
 <Meta
-  title="Admin|NavigationSubMenu"
+  title="Admin/NavigationSubMenu"
   component={NavigationSubMenu}
 />
 
