--- a/packages/q3-admin/src/components/SidePanelAction/SidePanelAction.stories.mdx
+++ b/packages/q3-admin/src/components/SidePanelAction/SidePanelAction.stories.mdx
@@ -9,7 +9,7 @@ import SidePanel from '../SidePanel';
 import SidePanelAction from './SidePanelAction';
 
 <Meta
-  title="Admin|SidePanelAction"
+  title="Admin/SidePanelAction"
   component={SidePanelAction}
 />
 
