--- a/packages/q3-admin/src/components/Template/Template.stories.mdx
+++ b/packages/q3-admin/src/components/Template/Template.stories.mdx
@@ -6,7 +6,7 @@ import {
 } from '@storybook/addon-docs/blocks';
 import Template from './Template';
 
-<Meta title="Admin|Template" component={Template} />
+<Meta title="Admin/Template" component={Template} />
 
 # Template
 
