--- a/packages/q3-admin/src/components/TemplateFullWidth/TemplateFullWidth.stories.mdx
+++ b/packages/q3-admin/src/components/TemplateFullWidth/TemplateFullWidth.stories.mdx
@@ -7,7 +7,7 @@ import {
 import TemplateFullWidth from './TemplateFullWidth';
 
 <Meta
-  title="Admin|TemplateFullWidth"
+  title="Admin/TemplateFullWidth"
   component={TemplateFullWidth}
 />
 
