--- a/packages/q3-admin/src/containers/Chart/Chart.stories.mdx
+++ b/packages/q3-admin/src/containers/Chart/Chart.stories.mdx
@@ -9,7 +9,7 @@ import ChartFixture, {
   FilterComponent,
 } from './Chart.fixture';
 
-<Meta title="Admin|Chart" component={Chart} />
+<Meta title="Admin/Chart" component={Chart} />
 
 # Chart
 
