--- a/packages/q3-admin/src/containers/DetailSidePanel/DetailSidePanel.stories.mdx
+++ b/packages/q3-admin/src/containers/DetailSidePanel/DetailSidePanel.stories.mdx
@@ -7,7 +7,7 @@ import {
 import DetailSidePanel from './DetailSidePanel';
 
 <Meta
-  title="Admin|Detail Side Panel"
+  title="Admin/Detail Side Panel"
   component={DetailSidePanel}
 />
 
