--- a/packages/q3-admin/src/containers/ProfileChangePassword/ProfileChangePassword.stories.mdx
+++ b/packages/q3-admin/src/containers/ProfileChangePassword/ProfileChangePassword.stories.mdx
@@ -7,7 +7,7 @@ import {
 import ProfileChangePassword from './ProfileChangePassword';
 
 <Meta
-  title="Admin|Profile Change Password"
+  title="Admin/Profile Change Password"
   component={ProfileChangePassword}
 />
 
