--- a/packages/q3-components/src/InlineEditor/InlineEditor.stories.mdx
+++ b/packages/q3-components/src/InlineEditor/InlineEditor.stories.mdx
@@ -10,7 +10,7 @@ import InlineEditor from './InlineEditor';
 import { simulateNetworkDelay } from '../../tests/support';
 
 <Meta
-  title="Components|InlineEditor"
+  title="Components/InlineEditor"
   component={InlineEditor}
 />
 
