--- a/packages/q3-ui-cart/tests/Cart.stories.mdx
+++ b/packages/q3-ui-cart/tests/Cart.stories.mdx
@@ -13,12 +13,12 @@ import Provider, {
   Drawer,
 } from '../src';
 
-<Meta title="Cart" component={Provider} />
+<Meta title="Cart/Demo" component={Provider} />
 
 # Cart
 
 <Preview>
-  <Story name="Populated">
+  <Story name="Demo">
     <Locale>
       <Provider {...useFixtures()}>
         <Box>
