--- a/packages/q3-ui-datatables/stories/Features.stories.mdx
+++ b/packages/q3-ui-datatables/stories/Features.stories.mdx
@@ -19,7 +19,7 @@ import {
 import orders from '../__fixtures__/orders.json';
 import TableView from '../src';
 
-<Meta title="Datatables|Table" component={TableView} />
+<Meta title="Datatables/Table" component={TableView} />
 
 # Table
 
