--- a/packages/q3-ui-filemanager/src/Avatar/Avatar.stories.mdx
+++ b/packages/q3-ui-filemanager/src/Avatar/Avatar.stories.mdx
@@ -8,7 +8,7 @@ import Avatar from './Avatar';
 import files from '../../tests/fixtures/files.json';
 import support from '../../tests/support';
 
-<Meta title="Files|Avatar" component={Avatar} />
+<Meta title="Files/Avatar" component={Avatar} />
 
 # Avatar
 
