--- a/packages/q3-ui-filemanager/src/PhotoUpload/PhotoUpload.stories.mdx
+++ b/packages/q3-ui-filemanager/src/PhotoUpload/PhotoUpload.stories.mdx
@@ -9,7 +9,7 @@ import PhotoUpload from './PhotoUpload';
 import files from '../../tests/fixtures/files.json';
 import support from '../../tests/support';
 
-<Meta title="Files|PhotoUpload" component={PhotoUpload} />
+<Meta title="Files/PhotoUpload" component={PhotoUpload} />
 
 # PhotoUpload
 
