--- a/packages/q3-ui-forms/src/fields/Chips/Chips.stories.mdx
+++ b/packages/q3-ui-forms/src/fields/Chips/Chips.stories.mdx
@@ -11,7 +11,7 @@ import {
 } from '../__fixtures__/options';
 import { Form, Field } from '../../builders';
 
-<Meta title="Forms|Fields/Chips" component={Chips} />
+<Meta title="Forms/Fields/Chips" component={Chips} />
 
 <Preview>
   <Story name="With custom label">
