--- a/packages/q3-ui-forms/src/fields/File/File.stories.mdx
+++ b/packages/q3-ui-forms/src/fields/File/File.stories.mdx
@@ -8,7 +8,7 @@ import Form from '../../builders/Form';
 import { action } from '@storybook/addon-actions';
 import Field from '../../builders/Field';
 
-<Meta title="Forms|Fields/File" component={Field} />
+<Meta title="Forms/Fields/File" component={Field} />
 
 # File
 
