--- a/packages/q3-ui-forms/src/fields/MultiSelect/MultiSelect.stories.mdx
+++ b/packages/q3-ui-forms/src/fields/MultiSelect/MultiSelect.stories.mdx
@@ -12,7 +12,7 @@ import {
 import { Form, Field } from '../../builders';
 
 <Meta
-  title="Forms|Fields/MultiSelect"
+  title="Forms/Fields/MultiSelect"
   component={MultiSelect}
 />
 
