--- a/packages/q3-ui-forms/src/fields/MultiText/MultiText.stories.mdx
+++ b/packages/q3-ui-forms/src/fields/MultiText/MultiText.stories.mdx
@@ -8,7 +8,7 @@ import MultiText from './MultiText';
 import { Form, Field } from '../../builders';
 
 <Meta
-  title="Forms|Fields/MultiText"
+  title="Forms/Fields/MultiText"
   component={MultiText}
 />
 
