--- a/packages/q3-ui-forms/src/fields/checkbox/checkbox.stories.mdx
+++ b/packages/q3-ui-forms/src/fields/checkbox/checkbox.stories.mdx
@@ -8,7 +8,7 @@ import Checkboox from '.';
 import { Form, Field } from '../../builders';
 
 <Meta
-  title="Forms|Fields/Checkboox"
+  title="Forms/Fields/Checkboox"
   component={Checkboox}
 />
 
