--- a/packages/q3-ui-forms/stories/Adapters.stories.mdx
+++ b/packages/q3-ui-forms/stories/Adapters.stories.mdx
@@ -18,7 +18,7 @@ import { Exists, Has } from '../src/presets';
 import { countries } from '../src/fields/__fixtures__/options';
 import { asOptions } from '../src/helpers';
 
-<Meta title="Forms|Adapters" component={EncodedUrl} />
+<Meta title="Forms/Adapters" component={EncodedUrl} />
 
 # Encoded Url (For filtering data)
 
