--- a/packages/q3-ui-notifications/stories/Notifications.stories.mdx
+++ b/packages/q3-ui-notifications/stories/Notifications.stories.mdx
@@ -10,7 +10,7 @@ import Notifications from '../src/Notifications';
 import data from './fixture';
 
 <Meta
-  title="Notifications|List"
+  title="Notifications/List"
   component={Notifications}
   decorators={[withA11y]}
 />
