--- a/packages/q3-ui-repeater/__fixtures__/stories/Repeater.stories.mdx
+++ b/packages/q3-ui-repeater/__fixtures__/stories/Repeater.stories.mdx
@@ -6,7 +6,7 @@ import {
 } from '@storybook/addon-docs/blocks';
 import Repeater from '../support';
 
-<Meta title="Repeater|Repeater" component={Repeater} />
+<Meta title="Repeater/Repeater" component={Repeater} />
 
 # Repeater
 
