--- a/packages/q3-admin/src/components/Header/Header.stories.mdx
+++ b/packages/q3-admin/src/components/Header/Header.stories.mdx
@@ -8,7 +8,7 @@ import IconButton from '@material-ui/core/IconButton';
 import KeyboardBackspace from '@material-ui/icons/KeyboardBackspace';
 import Header from './Header';
 
-<Meta title="Admin|Header" component={Header} />
+<Meta title="Admin/Header" component={Header} />
 
 # Header
 
