--- a/packages/q3-admin/src/components/PendingChangesModal/PendingChangesModal.stories.mdx
+++ b/packages/q3-admin/src/components/PendingChangesModal/PendingChangesModal.stories.mdx
@@ -8,7 +8,7 @@ import { action } from '@storybook/addon-actions';
 import PendingChangesModal from './PendingChangesModal';
 
 <Meta
-  title="Admin|Pending Changes Modal"
+  title="Admin/Pending Changes Modal"
   component={PendingChangesModal}
 />
 
