--- a/packages/q3-admin/src/components/PollIndicator/PollIndicator.stories.mdx
+++ b/packages/q3-admin/src/components/PollIndicator/PollIndicator.stories.mdx
@@ -7,7 +7,7 @@ import {
 import PollIndicator from './PollIndicator';
 
 <Meta
-  title="Admin|Poll Indicator"
+  title="Admin/Poll Indicator"
   component={PollIndicator}
 />
 
