--- a/packages/q3-ui-filemanager/src/FileList/FileList.stories.mdx
+++ b/packages/q3-ui-filemanager/src/FileList/FileList.stories.mdx
@@ -8,7 +8,7 @@ import FileList from './FileList';
 import files from '../../tests/fixtures/files.json';
 import support from '../../tests/support';
 
-<Meta title="Files|FileList" component={FileList} />
+<Meta title="Files/FileList" component={FileList} />
 
 # FileList
 
