--- a/packages/q3-ui-forms/stories/Fields.stories.mdx
+++ b/packages/q3-ui-forms/stories/Fields.stories.mdx
@@ -110,12 +110,7 @@ import { Exists } from '../src/presets';
               required: number > 5,
             })}
           />
-          <Repeater
-            group="repeats"
-            required
-            min={2}
-            max={10}
-          >
+          <Repeater group="repeats">
             <Field name="fruit" type="text" />
           </Repeater>
         </Form>
