--- a/packages/q3-ui-forms/src/fields/checkbox/checkbox.stories.mdx
+++ b/packages/q3-ui-forms/src/fields/checkbox/checkbox.stories.mdx
@@ -7,10 +7,7 @@ import {
 import Checkboox from '.';
 import { Form, Field } from '../../builders';
 
-<Meta
-  title="Forms/Fields/Checkboox"
-  component={Checkboox}
-/>
+<Meta title="Forms/Fields/Checkbox" component={Checkboox} />
 
 <Preview>
   <Story name="As default">
