fix: storybook jsx file path

--- a/packages/q3-ui/src/searchBar/search.stories.mdx
+++ b/packages/q3-ui/src/searchBar/search.stories.mdx
@@ -1,5 +1,5 @@
 import Search from './desktopSearch';
-import MobileSearch from './mobileSearch.jsx';
+import MobileSearch from './mobileSearch';
 
 <Meta title="UI/Search" component={Search} />
 
