--- a/packages/q3-hooked/src/useGatekeeper/useGatekeeper.stories.mdx
+++ b/packages/q3-hooked/src/useGatekeeper/useGatekeeper.stories.mdx
@@ -23,13 +23,12 @@ unauthorized users
 ## Return value
 
 useGatekeeper returns boolean whilte authorizing users. It
-automatically navigates unauthorized users respectively.
-Therefore, it does not return values if users are
-unauthorized.
+automatically navigates unauthorized users respectively. It
+returns null if users are authorized.
 
 | Property  | Description |
 | --------- | ----------- |
-| `default` | boolean     |
+| `default` | boolean     | null |
 
 ## Example
 
